Update 2_db.properties.md